// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication - Verify JWT Invalid JWT token 1`] = `
Object {
  "error": "Unauthorized",
  "message": "Unauthorized",
  "status": 401,
  "statusCode": 401,
}
`;

exports[`Authentication - Verify JWT Invalid JWT token: gateway logs 1`] = `
"**** START OUTPUT CAPTURE *****\\"
[hh:mm:ss] [31mERROR[39m (SigningKeyNotFoundError): [36mFailed to get JWK for request token.[39m
    SigningKeyNotFoundError: Unable to find a signing key that matches 'C1B59DF60057CFB292C4E36CCE329615'
[hh:mm:ss] [34mDEBUG[39m (SigningKeyNotFoundError): [36mFailed to verify request JWT[39m
    SigningKeyNotFoundError: Unable to find a signing key that matches 'C1B59DF60057CFB292C4E36CCE329615'
\\"***** END OUTPUT CAPTURE *****"
`;

exports[`Authentication - Verify JWT Valid JWT token 1`] = `
Object {
  "jwt_foo": "FOO",
}
`;

exports[`Authentication - Verify JWT Valid JWT token: gateway logs 1`] = `
"**** START OUTPUT CAPTURE *****\\"
\\"***** END OUTPUT CAPTURE *****"
`;
